--- a/CalcLibrary/CalcLibrary.csproj
+++ b/CalcLibrary/CalcLibrary.csproj
@@ -41,6 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calc.cs" />
+    <Compile Include="DefaultOperations\DivOperation.cs" />
+    <Compile Include="DefaultOperations\ExpOperation.cs" />
+    <Compile Include="DefaultOperations\MultOperation.cs" />
+    <Compile Include="DefaultOperations\SqrtOperation.cs" />
+    <Compile Include="DefaultOperations\SubOperation.cs" />
+    <Compile Include="DefaultOperations\SumOperation.cs" />
+    <Compile Include="IOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
